MDEV-26224 InnoDB fails to remove AUTO_INCREMENT attribute

Reset dict_table_t::persistent_autoinc when inplace alter table is
committed successfully.